
Package: R.utils
================

Version: 1.27.0 [2013-08-30]
o Added use() for easy attaching/loading and automatic installation
  of packages.


Version: 1.26.4 [2013-08-27]
o CLEANUP: Arguments$getReadablePathnames(files, paths=NULL) no longer
  warns about "rep(paths, length.out = nbrOfFiles) : 'x' is NULL so
  the result will be NULL" if length(files) > 0.
o CLEANUP: Package no longer utilizes ':::'.
o DOCUMENTATION: Help for installPackages() was missing.  Thanks
  Gabor Grothendieck for reporting on this.


Version: 1.26.3 [2013-08-20]
o Forgot to declare default inherits() as an S3 method.


Version: 1.26.2 [2013-07-30]
o ROBUSTNESS/BUG FIX: System$findGhostscript() could still
  give errors.  Completely rewrote how Ghostscripts is searched.
  On Windows, environment variable 'GSC' is now also searched.
  Thanks to Brian Ripley for the feedback.


Version: 1.26.1 [2013-07-29]
o BUG FIX: System$findGhostscript() would give "Error in pathname
  [sapply(pathname, FUN = isFile)]: invalid subscript type 'list'"
  if no device was found.


Version: 1.26.0 [2013-07-27]
o Added tempvar() for creating non-existing temporary variables.
o Added enterf() to Verbose, which is an sprintf-like enter().
o Now System$findGhostscript() returns system variable 'R_GSCMD' if
  set and it refers to an existing executable (and unless force=TRUE).
  It then checks with Sys.which().  On Windows, it finally searches
  for 'gswin64c.exe' and 'gswin32c.exe' on known locations.  Added
  arguments 'firstOnly' and 'force'.
o Now getAbsolutePath() shortens paths if possible, e.g. "C:/foo/.."
  becomes "C:/".
o Added argument 'skip' to gzip() and gunzip().
o BUG FIX: gunzip() would ignore argument 'overwrite'.
o BUG FIX: filePath("C:/foo/..") returned "C:", which should be "C:/".


Version: 1.25.3 [2013-07-27]
o BUG FIX: findSourceTraceback() would give an error "Unknown class of
  'srcfile': character" for source(..., keep.source=FALSE) in recent